# jiri

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker-publish.yml  docker.yml  rust.yml
core/: Cargo.toml
core/src/: p2p.rs
core/src/p2p/: behaviour.rs  command.rs  event.rs  file_exchange.rs  message.rs  transport.rs
jiri-rs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
jiri-rs/src/: main.rs
jiri-wasm/: .dockerignore  Cargo.toml  Dockerfile  README.md
jiri-wasm/egui/: Cargo.toml  index.html
jiri-wasm/egui/src/: app.rs  lib.rs  main.rs
jiri-wasm/src/: command.rs  event.rs  lib.rs
jiri-wasm/www/: README.md  index.html  index.js  package-lock.json  package.json
jiri-web/: README.md  blockies.d.ts  package.json
jiri-web/src/components/: footer.tsx  nav.tsx
jiri-web/src/lib/: constants.ts  libp2p.ts
jiri-web/src/pages/: chat.tsx  index.tsx
jiri-web/src/styles/: globals.css
src/: api.rs  main.rs  p2p.rs
src/api/: filter.rs  handler.rs
src/p2p/: behaviour.rs  command.rs  message.rs
standalone/: Cargo.toml  Dockerfile
standalone/src/: api.rs  main.rs  p2p.rs
standalone/src/api/: filter.rs  handler.rs
standalone/src/p2p/: behaviour.rs  file_exchange.rs
tests/: integration_test.rs
web/: .gitignore  Cargo.toml  README.md  index.html
web/assets/: chat.css
web/src/: main.rs
