[package]
name = "jiri"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
bytes = "1.4.0"
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10"
futures = "0.3.28"
libp2p = { version = "0.51.3", features = ["async-std", "dns", "mdns", "kad", "noise", "macros", "request-response", "tcp", "websocket", "yamux", "gossipsub"] }
log = "0.4.17"
multiaddr = { version = "0.17.1" }
serde = "1.0.160"
serde_derive = "1.0.160"
tokio = { version = "1.27.0", features = ["full"] }
warp = "0.3.4"
