[package]
name = "jiri-standalone"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
bytes = "1.4.0"
env_logger = "0.10"
log = "0.4.17"
tokio = { version = "1.27.0", features = ["full"] }
warp = "0.3.4"
futures = "0.3.28"
async-channel = "1.8.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
jiri-core = { path = "../core", features = ["standalone"] }

[dev-dependencies]
dockertest = "0.3.1"
