[package]
name = "jiri-web"
version = "0.0.1"
authors = ["Youngjoon Lee <taxihighway@gmail.com>"]
edition = "2021"

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
eframe = "0.21.0"
egui = "0.21.0"
libp2p-websys-transport = "0.1.5"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.34"
async-channel = "1.8.0"
futures = "0.3.28"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dependencies.libp2p]
version = "0.51.3"
features = ["floodsub", "macros", "noise", "yamux", "wasm-bindgen"]
