[package]
name = "jiri-web"
version = "0.0.1"
authors = ["Youngjoon Lee <taxihighway@gmail.com>"]
edition = "2021"

[dependencies]
eframe = "0.21.0"
egui = "0.21.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.34"
async-channel = "1.8.0"
jiri-core = { path = "../core", features = ["web"] }
multiaddr = "0.17.1"
futures = "0.3.28"
